# rigz

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.release  README.md  local_run.json
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: lib.rs
examples/hello_world/: hello.rigz
modules/cdylib/: .keep
modules/crates/rigz_lua/: CHANGELOG.md  Cargo.toml  README.md
modules/crates/rigz_lua/src/: args.rs  lib.rs
modules/polc/: Cargo.toml  README.md
modules/shortkey/: CHANGELOG.md  README.md  build.zig  build.zig.zon
modules/std_lib/: module.rigz
modules/std_lib/lib/: main.lua
parse/: CHANGELOG.md  Cargo.toml  README.md
parse/src/: grammar.pest  lib.rs
rigz_core/: Cargo.toml  build.rs  rigz_core.h
rigz_core/src/: lib.rs
rigz_lib/: README.md  build.zig  build.zig.zon  module.rigz
rigz_lib/src/: root.zig
rigz_lua/: Cargo.toml
rigz_lua/src/: lib.rs
rigz_modules/: README.md  build.zig  build.zig.zon
rigz_modules/src/: root.zig
rigz_parse/: Cargo.toml
rigz_parse/src/: grammar.pest  lib.rs
rigz_plugins/: build.zig  build.zig.zon
rigz_runtime/: Cargo.toml  README.md  build.rs
rigz_runtime/src/: lib.rs  modules.rs  parse.rs  run.rs
runtime/: CHANGELOG.md  Cargo.toml  README.md
runtime/src/: lib.rs  modules.rs  parse.rs  run.rs
src/: commands.rs  init.rs  logger.rs  main.rs  output.rs
