[package]
name = "rigz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["rigz_lua","rigz_core", "rigz_parse", "rigz_runtime"]

[workspace.dependencies]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_derive = "4.5.4"
log = { version = "0.4.21", features = [] }
rigz_core = { path = "rigz_core" }
rigz_runtime = { path = "rigz_runtime" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[lints.clippy]
needless_return = "allow"

