[package]
name = "rigz"
description = "CLI application to run rigz programs."
version = "0.0.2"
edition = "2021"
license = "MIT"
keywords = ["rigz", "cli"]
repository = "https://gitlab.com/inapinch/rigz/rigz"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["modules/crates/rigz_lua", "core", "parse", "runtime"]

[workspace.dependencies]
anyhow = "1.0.82" # TODO - https://gitlab.com/inapinch/rigz/rigz/-/issues/1
log = { version = "0.4.21", features = [] }

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_derive = "4.5.4"
log.workspace = true

rigz_core = {  version = "0.0.2", path = "core" }
rigz_runtime = { version = "0.0.2", path = "runtime" }
rustyline = "14.0.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tree-sitter = "0.22.6"
tree-sitter-rigz = "0.0.1"

[lints.clippy]
needless_return = "allow"

