[package]
name = "rigz_parse"
description = "AST parser for rigz"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["rigz", "ast"]
readme = "README.md"
homepage = "https://gitlab.com/inapinch/rigz/rigz/parse"
repository = "https://gitlab.com/inapinch/rigz/rigz"

[dependencies]
anyhow.workspace = true
log.workspace = true
pest = "2.7.10"
pest_derive = "2.7.10"
serde = { version = "1.0.201", features = ["derive"] }
