[package]
name = "rigz_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[build-dependencies]
rigz_core = { path = "../rigz_core" } # required to generated header file

[dependencies]
anyhow = { workspace = true }
glob = "0.3.1"
log = { workspace = true, features = [] }
rigz_core = { path = "../rigz_core" }
rigz_lua = { path = "../modules/crates/rigz_lua" }
rigz_parse = { path = "../rigz_parse" }
serde = { version = "1.0.200", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.116"
