[package]
name = "rigz_lua"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow.workspace = true
log.workspace = true
mlua = { version = "0.9.7", features = ["lua54", "serialize"] }
# core = { path = "../../../core" }
rigz_core = { path = "../../../core" }
serde = { version = "1.0.201", features = ["derive"] }
serde-value = "0.7.0"
