[package]
name = "rigz_lua"
description = "Lua Module for rigz language"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/inapinch/rigz/rigz/modules/crates/rigz_lua"
repository = "https://gitlab.com/inapinch/rigz/rigz"
keywords = ["rigz", "lua"]

[dependencies]
anyhow.workspace = true
log.workspace = true
mlua = { version = "0.9.7", features = ["lua54", "serialize", "vendored"] }
rigz_core = { version = "0.0.1", path = "../../../core" }
serde = { version = "1.0.201", features = ["derive"] }
serde-value = "0.7.0"
